# fbpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  build_windows.ps1  conanfile.txt
.claude/: agent-ts-prompt.md  cpp-sitter-agent.json
.github/workflows/: ci-linux-gcc.yml  ci-linux.yml  ci-windows-msvc.yml
cmake/: FindFirebird.cmake  fbppConfig.cmake.in  fbppPackageSmokeTest.cmake
config/: CMakeLists.txt  config.json.template  test_config.json
doc/: CICD_INTEGRATION_PLAN.md  CI_CD_REFACTORING_SPEC.md  EXTENDED_TYPES_ADAPTERS.md  FIREBIRD_BUFFER_AND_TYPES.md  FIREBIRD_TYPES_HANDLING.md  GITHUB_PREPARATION_GUIDE.md  LIB_V1_ARCHITECTURE.md  LLM_DATABASE_GUIDE.md  NAMED_PARAMETERS.md  PACKER_ARCHITECTURE_GUIDE.md  PARAM_BINDER.md  PREPARED_STATEMENT_CACHE_SPEC.md  PROJECT_ANALYSIS.md  QUERY_GENERATOR_ADAPTERS_IMPLEMENTATION_PLAN.md  TUPLE_PACKER_ARCHITECTURE.md  fbpp.md  fbpp_integration_prompt.md  firebird_mcp_module_plan.md  firebird_oo_api_doc.md  firebird_types_guide.md  public_api_contracts.md  roadmap_api_coverage.md  sborka_windows_linux.md  sql_value_codec_tz.md  struct_workflow.md  structure_pack.md  trace_sink.md
doc/archive/: git-authors.txt  git-branches.txt  git-history-full.txt
doc/examples/: 01.create.cpp  01.create.pas  02.update.cpp  03.select.cpp  04.print_table.cpp  05.user_metadata.cpp  06.fb_message.cpp  07.blob.cpp  08.events.cpp  09.service.cpp  10.backup.cpp  11.batch.cpp  12.batch_isc.cpp  13.null_pk.cpp  ifaceExamples.h  makefile
examples/: 01_basic_operations.cpp  02_json_operations.cpp  03_batch_simple.cpp  04_batch_advanced.cpp  06_named_parameters.cpp  07_cancel_operation.cpp  07_cancel_test_variants.cpp  08_struct_fetch.cpp  09_extended_types_struct.cpp  10_param_binder.cpp  CMakeLists.txt  test_prepare_transaction.cpp  test_statement_free.cpp  test_statement_refcount.cpp
include/fbpp/: fbpp.hpp  fbpp_all.hpp  fbpp_extended.hpp  query_generator_service.hpp
include/fbpp/adapters/: chrono_datetime.hpp  cppdecimal_decfloat.hpp  ttmath_int128.hpp  ttmath_numeric.hpp
include/fbpp/core/: batch.hpp  batch_impl.hpp  connection.hpp  environment.hpp  exception.hpp  extended_types.hpp  firebird_compat.hpp  json_packer.hpp  json_unpacker.hpp  message_builder.hpp  message_metadata.hpp  named_param_helper.hpp  named_param_parser.hpp  pack_utils.hpp  param_binder.hpp  query_executor.hpp  result_set.hpp  row.hpp  statement.hpp  statement_cache.hpp  status_utils.hpp  struct_descriptor.hpp  struct_pack.hpp  timestamp_utils.hpp  transaction.hpp  transaction_impl.hpp  transaction_templates.hpp  tuple_packer.hpp  tuple_unpacker.hpp  type_adapter.hpp  type_traits.hpp
include/fbpp/core/detail/: conversion_utils.hpp  firebird_raii.hpp  sql_value_codec.hpp  struct_pack.hpp
include/fbpp/ext/: blob_stream.hpp  dataset_adapter.hpp  dataset_loader.hpp  memtable_sink.hpp  rad_optional_variant.hpp  rad_variant_decoder.hpp  row_variant.hpp
include/fbpp/schema/: adapter_config.hpp  query_analysis.hpp  query_analyzer.hpp  schema_inspector.hpp  schema_types.hpp  type_mapper.hpp
include/fbpp_util/: config.h  config_loader.h  connection_helper.hpp  logging.h  tdatetime.hpp  trace.h
scripts/: prepare_test_db.sh  run_tests.sh  setup_local_env.sh
src/core/firebird/: fb_batch.cpp  fb_connection.cpp  fb_exception.cpp  fb_extended_types.cpp  fb_message_builder.cpp  fb_message_metadata.cpp  fb_named_param_parser.cpp  fb_result_set.cpp  fb_row.cpp  fb_statement.cpp  fb_statement_cache.cpp  fb_transaction.cpp  query_generator_service.cpp
src/schema/: query_analyzer.cpp  schema_inspector.cpp  type_mapper.cpp
src/tools/: query_generator.cpp
src/util/: config.cpp  config_loader.cpp  connection_helper.cpp  logging.cpp  trace.cpp
tests/: CMakeLists.txt  manual_test_ttmath_gen.cpp  test_base.cpp  test_base.hpp  test_query_generator_runner.cpp
tests/adapters/: test_chrono_datetime.cpp  test_cppdecimal_decfloat.cpp  test_ttmath_int128.cpp  test_ttmath_scale.cpp
tests/data/: table_test_1_queries.json
tests/integration/: test_generated_datetime_compile.cpp  test_generated_decfloat_compile.cpp  test_generated_ttmath_compile.cpp  test_query_generator_combined.cpp  test_query_generator_datetime.cpp  test_query_generator_decfloat.cpp  test_query_generator_ttmath.cpp
tests/package_smoke/codegen/: CMakeLists.txt  smoke.cpp
tests/package_smoke/core/: CMakeLists.txt  smoke.cpp
tests/package_smoke/schema/: CMakeLists.txt  smoke.cpp
tests/test_data/: query_generator_combined_queries.json  query_generator_datetime_queries.json  query_generator_decfloat_queries.json  query_generator_schema.sql  query_generator_ttmath_queries.json  query_generator_ttmath_schema.sql
tests/unit/: test_adapted_type_traits.cpp  test_blob_error_paths.cpp  test_blob_subtype.cpp  test_cached_statements.cpp  test_cancel_operation.cpp  test_config.cpp  test_connection_error_paths.cpp  test_core_wrapper.cpp  test_execute_procedure.cpp  test_extended_types_conversion.cpp  test_fb_version_gating.cpp  test_fbclient_symbols.cpp  test_firebird_exception.cpp  test_logging.cpp  test_message_metadata.cpp  test_named_parameters.cpp  test_param_binder.cpp  test_param_binder_optional.cpp  test_prepare_uncached.cpp  test_procedure_metadata.cpp  test_query_analyzer.cpp  test_query_generator.cpp  test_query_generator_integration.cpp  test_query_metadata.cpp  test_result_set_rows.cpp  test_row_owning.cpp  test_row_view.cpp  test_schema_inspector.cpp  test_statement.cpp  test_statement_cache.cpp  test_statement_kind.cpp  test_struct_descriptor.cpp  test_struct_pack.cpp  test_tdatetime.cpp  test_timestamp_utils.cpp  test_trace.cpp  test_type_mapper.cpp
